--- a/composer.json
+++ b/composer.json
@@ -11,15 +11,22 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "cmb2/cmb2": "9999999-dev"
+        "cmb2/cmb2": "9999999-dev",
+        "php": ">=7.3"
+       
     },
     "autoload": {
-        "psr-4": {"Inc\\": "./inc"}
+        "psr-4": {
+            "Inc\\": "./inc"
+        },
+        "files": [
+            "vendor/cmb2/cmb2/init.php"
+        ]    
+        
     },
     "require-dev": {
-        "symfony/var-dumper": "9999999-dev"
-    },
-    "require": {
-    "php": ">=7.3"    
+        "symfony/var-dumper": "9999999-dev",
+         "phpunit/phpunit": "9.5.x-dev"
     }
+    
 }
