--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
 	},
 	"license": "GPL-3.0",
 	"dependencies": {
+		"@wordpress/api-fetch": "^5.2.6",
 		"code-prettify": "^0.1.0",
 		"node-sass": "^6.0.1",
 		"sass": "^1.43.4"
