automatisation du cpt + str class for filtre

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "minimum-stability": "dev",
     "require": {
         "cmb2/cmb2": "9999999-dev",
-        "php": ">=7.3"
+        "php": ">=7.3",
+        "jjgrainger/posttypes": "9999999-dev"
        
     },
     "autoload": {
