--- a/.github/ci.yml
+++ b/.github/ci.yml
@@ -1,18 +1,45 @@
-name: CI
+on:
+  - pull_request
+  - push
 
-on: [push]
+name: CI-Win
 
 jobs:
-  build-test:
-    runs-on: ubuntu-latest
+  tests:
+    name: Tests
+
+    runs-on: windows-latest
+
+    strategy:
+      matrix:
+        php-versions: [7.3, 7.4]
 
     steps:
-      - uses: actions/checkout@v2
-      - uses: php-actions/composer@v5 # or alternative dependency management
-      - uses: php-actions/phpunit@v3
-      - name: Install WordPress
-        run: composer install --no-dev --prefer-dist --no-interaction
-  with:
-    configuration: phpunit.xml.dist
+      - name: Checkout
+        uses: actions/checkout@v1
+        with:
+          fetch-depth: 1
 
-    # ... then your own project steps ...
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v1
+        with:
+          php-version: ${{ matrix.php-versions }}
+          extensions: curl, intl, mbstring, openssl, pdo_sqlite, soap, xdebug
+          ini-values: assert.exception=1, zend.assertions=1
+
+      - name: Restore cached composer dependencies
+        uses: actions/cache@v1
+        with:
+          path: ~\AppData\Local\Composer
+          key: ${{ matrix.php-versions }}-composer-${{ hashFiles('**/composer.json') }}
+          restore-keys: |
+            ${{ matrix.php-versions }}-composer-
+      - name: Install dependencies with composer
+        run: php ./tools/composer update --no-ansi --no-interaction --no-progress --no-suggest
+
+      - name: Run sanity check
+        run: ./build/scripts/sanity-check
+        shell: bash
+
+      - name: Run tests with phpunit
+        run: php ./phpunit
