--- a/.github/ci.yml
+++ b/.github/ci.yml
@@ -2,7 +2,7 @@ on:
   - pull_request
   - push
 
-name: CI-Win
+name: ci.yml
 
 jobs:
   tests:
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        php-versions: [7.3, 7.4]
+        php-versions: [7.3, 7.4, 8.0]
 
     steps:
       - name: Checkout
